Subida con aclaración sobre estacionalidad

--- a/laboratorio-modulo9-leccion02-series-temporales-sarima.ipynb
+++ b/laboratorio-modulo9-leccion02-series-temporales-sarima.ipynb
@@ -3502,15 +3502,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Observamos que los datos son NO Estacionarios (es decir, tienen tendencia)  \n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Observamos que los datos son NO Estacionarios (es decir, tienen tendencia) pero sobre todo este gráfico sirve para observar la estacionalidad  \n",
-    "Parece que nuestros datos también son estacionales.   "
+    "Observamos que los datos parecen ser estacionarios (ya que no parece haber una tendencia gráficamente) pero son NO Estacionarios al comprobarlo analíticamente (es decir, tienen tendencia).Además este gráfico sirve para observar la estacionalidad. En este caso no parece ser estacional \n"
    ]
   },
   {
